# xsd-coverage

./: CMakeLists.txt  README.md  xsd-coverage.py
lib/: rapidxml_utils.hpp
src/: RecursiveFilesExtractor.cpp  RecursiveFilesExtractor.h  XMLForest.cpp  XMLForest.h  XMLUtils.cpp  XMLUtils.h  XSDCoverage.cpp  tree.h  xsd_coverage.cpp
